src/routes/main-menu/main-menu.styles.scss
.main-menu {
  position: relative;
  width: 40%;
  // left: 50%;
  // top: 50%;
  max-width: 750px;
  // transform: translateY(-65%) translateX(-50%); // Adjusts for both X and Y centering
  margin: auto;
  // perspective: 1000px;
}

.app-title {
  font-family: 'Mouse Memoirs', sans-serif;
  // color: #ffff00;
  color: var(--title);
  font-size: 6rem;
  text-shadow: rgba(0, 0, 0, 0.8) 5px 5px 10px;
}

.main-menu-container {
  // background-color: #009485;
  background-color: var(--menu);
  border-radius: 20px;
  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
    rgba(0, 0, 0, 0.08) 0px 15px 12px;

  // 3D hover
  transform-style: preserve-3d;
  perspective: 1000px;

  .main-menu-inner-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding: 4rem;
    transform: translateZ(50px);

    // fix the jagged animation by forcing hardware acceleration
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
    // perspective: 1000;

    &::before {
      content: '';
      position: absolute;
      top: 2.5rem;
      right: 3rem;
      bottom: 2.5rem;
      left: 3rem;
      border-radius: 15px;
      // border: dotted 4px #ffff00;
      border: dotted 4px var(--menuBorder);
      transform: translateZ(50px);
      // perspective: 1000;
      z-index: -1;
    }
  }

  .menu-item-container {
    display: flex;
    justify-content: center;
    width: 100%;
  }

  .menu-link {
    display: inline-block;
    width: fit-content;
    position: relative;
    font-size: 5rem;
    text-decoration: none;
    // color: #73ffca;
    color: var(--primaryText);
    padding: 0rem;
    transition: transform cubic-bezier(0.175, 0.885, 0.32, 1.175) 250ms,
      color cubic-bezier(0.175, 0.885, 0.32, 1.175) 350ms;
    text-shadow: rgba(0, 0, 0, 0.2) 5px 5px 10px;

    &:hover {
      opacity: 1;
      // color: #ffff00;
      color: var(--hoverText);
      text-shadow: rgba(0, 0, 0, 0.3) 10px 10px 20px;
      transform: translateY(-0.05em) translateZ(60px) scale(1.2, 1.2)
        rotate(1.4deg);
    }

    &:active,
    :focus {
      transform: scale(0.98, 0.98);
    }
  }
}

.disabled-menu {
  pointer-events: none;
  opacity: 0.5;

  &::before {
    content: 'UNDER CONSTRUCTION';
    font-size: 1.3rem;
    // color: #000;
    color: var(--disabledText);
    position: absolute;
    width: 100%;
    height: 100%;
    top: 40%;
    // right: 0;
    // bottom: 0;
    left: 0;
    text-align: center;
    transform: rotate(15deg);
  }
}
.cursor-not-allowed {
  cursor: not-allowed;
  user-select: none;
}

